# CSE

./: .gitignore  Border.docx  CreateFiles.bat  CreateFiles.sh  README.md  hqwer
.github/workflows/: sync-assignments.yml  sync-to-papertrail.yml
CN Sem-5/: Exp-1.pkt
DOS Sem-5/: Lab format_DOS(3249).docx
PPWC Sem-5/Assignment-1/: Q5d.c  Q8.c
PPWC Sem-5/Practice Program/: Q2.c  Q3.c  Q7.c  Q9.c
Python Sem-5/Assignment-1/: Q11.py  Q12.py  Q13.py  Q15.py  Q17.py  Q24.py  Q7.py  Q8.py
SEM_1 (ICP)/2241004161/: AffineCipher.java  DescriptionAndOutput.docx
SEM_1 (ICP)/Array/: Demo.java  Q1.java
SEM_1 (ICP)/Assignment-1/: Assignment_1.java  Assignment_2.java  Assignment_3.java  Assignment_4.java  Assignment_5.java  Assignment_6.java  Question_1.java  Question_10.java  Question_2.java  Question_3.java  Question_4.java  Question_5.java  Question_6.java  Question_7.java  Question_8.java  Question_9.java
SEM_1 (ICP)/Assignment-2/: Assignment_1.java  Assignment_2.java  Assignment_3.java  Question_1.java  Question_2.java  Question_3.java  Question_4.java  Question_5.java  Question_6.java  Question_7.java
SEM_1 (ICP)/Assignment-3/: Assignment_1.java  Assignment_2.java  Assignment_3.java  Assignment_4.java  Assignment_5.java  Question_1.java  Question_10.java  Question_2.java  Question_3.java  Question_4.java  Question_5.java  Question_6.java  Question_7.java  Question_8.java  Question_9.java
SEM_1 (ICP)/Assignment-4/: A1.java  A2.java  A3.java  A4.java  A5.java  Question_1.java  Question_10.java  (+8 more)
SEM_6/GPWC/SFML/: CMakeLists.txt  CMakePresets.json  main.cpp
(+1315 files in other folders)
